# ai-agent-crew-ai-examples

./: .gitignore  README.md  pyproject.toml
crewai_agent_examples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
knowledge_agent/: __init__.py  config.py  ingestion.py  knowledge_manager.py  main.py  schemas.py
product_hunt_agent/: __init__.py  agent_builder.py  config.py  main.py  pyproject.toml  schemas.py  services.py
product_hunt_agent/crewai_product_hunt_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
