[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-agent-examples"
version = "0.1.0"
description = "CrewAI-based knowledge and Product Hunt agents with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.51.0",
    "crewai-tools>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.6.1",
    "chromadb>=0.5.5",
    "openai>=1.40.0",
    "httpx>=0.28.1",
    "pendulum>=3.0.0",
    "pypdf>=5.1.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "pytest>=8.3.3",
    "httpx>=0.28.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["knowledge_agent", "product_hunt_agent"]
