[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-product-hunt-agent"
version = "0.1.0"
description = "CrewAI Product Hunt agent with FastAPI and Product Hunt tools"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.51.0",
    "crewai-tools>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic-settings>=2.6.1",
    "httpx>=0.28.1",
    "pendulum>=3.0.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["product_hunt_agent"]
